@@ -1,3 +1,9 @@
+2008-04-07  Andreia Gaita <avidigal@novell.com> 
+	[Backport to 1.9]
+	* gluezilla.cpp, gluezilla.h: Use gluezilla_init for platform initialization
+	code only, browser widget initialization code moved to createBrowserWindow.
+	Fixes support of more than one embedded browser instance.
+
 2008-02-06  Andreia Gaita <avidigal@novell.com>
 	[Backport to 1.9]
 	* BrowserWindow.cpp: use ns strings, easier. Don't call up status 
